# chip8

./: .gitignore  CMakeLists.txt  readme.md
include/: cpu.h  memory.h  renderer.h  utils.h
src/: cpu.cpp  main.cpp  memory.cpp  renderer.cpp  utils.cpp
tests/: test.cpp
